# time-series-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: qa_seasonal_harmonics.md
report/: report.tex
report/assets/: results_2day.json
scripts/: add_tokyo_weather_holiday_labels.py  forecast_2day_analysis.py
