[project]
name = "tepco-electricity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]
